user-domain/terraform/module/alb/main.tf
locals {
  name = "${var.project_name}-${var.environment}"
}

resource "aws_ecs_cluster" "main" {
  name = local.name
  configuration {
    execute_command_configuration {
      logging = "DEFAULT"
    }
  }
  setting {
    name = "containerInsights"
    value = "enabled"
  }
  tags = var.tags
}

resource "aws_security_group" "alb" {
  name_prefix =  "${local.name}-alb-"
  description = "Security group for Application Load Balancer"
  vpc_id = var.vpc_id
  ingress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "HTTP from anywhere"
  }
  ingress {
    from_port = 443
    to_port = 443
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "HTTPS from anywhere"
  }
  egress {
    from_port = 0
    to_port = 0
    protocol = -1
    cidr_blocks = ["0.0.0.0/0"]
    description = "Allow all outbound"
  }
  
  tags = var.tags
  lifecycle {
    create_before_destroy = true
  }
}

resource "aws_security_group" "ecs_task" {
  name_prefix = "${local.name}-ecs-tasks-"
  description = "Security group for ECS tasks"
  vpc_id = var.vpc_id
  ingress {
    from_port = var.container_port
    to_port = var.container_port
    protocol = "tcp"
    security_groups = [aws_security_group.alb.id]
  }

  egress {
    from_port = 0
    to_port = 0
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "Allow all outbound"
  }

  tags = merge(var.tags, {
    Name = "${local.name}-ecs-tasks-sg"
  })

  lifecycle {
    create_before_destroy = true
  }
}

resource "aws_alb" "main" {
  name = "${local.name}-alb"
  internal = false
  load_balancer_type = "application"
  security_groups = [aws_security_group.alb.id]
  subnets = var.public_subnet_ids
  # Prevent accidental deletion of the ALB in the production environment
  enable_deletion_protection = var.environment == "prod" ? true : false
  enable_http2 = true
  enable_cross_zone_load_balancing = true

  tags = var.tags
}
